--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "or": "^0.2.0",
         "vue-owl-carousel": "^2.0.3",
         "vue-router": "^4.1.6",
+        "vuex": "^4.0.2",
         "yarn": "^1.22.19"
     }
 }
