--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
         "@fortawesome/fontawesome-free": "^6.2.0",
         "add": "^2.0.6",
         "or": "^0.2.0",
+        "swiper": "^8.4.4",
         "vue-owl-carousel": "^2.0.3",
         "vue-router": "^4.1.6",
-        "vuex": "^4.0.2",
         "yarn": "^1.22.19"
     }
 }
