--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.2.0",
+        "@vueform/multiselect": "^2.5.6",
+        "@vueup/vue-quill": "^1.0.0",
         "add": "^2.0.6",
         "or": "^0.2.0",
         "swiper": "^8.4.4",
-        "vue-owl-carousel": "^2.0.3",
         "vue-router": "^4.1.6",
         "yarn": "^1.22.19"
     }
