--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "or": "^0.2.0",
         "swiper": "^8.4.4",
         "vue-router": "^4.1.6",
+        "vuex": "^4.0.2",
         "yarn": "^1.22.19"
     }
 }
